--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@ ul {
 }
 
 h1 {
-  text-align: center;
+  width: fit-content;
+  margin: auto;
   font-family: cursive;
+}
+
+#date-changer {
+  width: fit-content;
+  margin: auto;
+
 }
