actual final CSS edits

--- a/src/components/DateItem.css
+++ b/src/components/DateItem.css
@@ -9,7 +9,8 @@ h4 {
 
 #date-item {
     list-style-position: inside;
-    border: 1px solid black
+    border: 1px solid white
+    
 }
 
 #feast-item {
