--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
-  background-color: rgb(245, 189, 121)
+  background-color: black;
+  
 }
-
 
 ul {
   list-style: none;
@@ -14,6 +14,7 @@ h1 {
   width: fit-content;
   margin: auto;
   font-family: cursive;
+  color: white
 }
 
 #date-changer {
