--- a/src/components/DateItem.css
+++ b/src/components/DateItem.css
@@ -7,6 +7,10 @@ h4 {
     text-align: center;
 }
 
+#weekday {
+    text-align: center;
+}
+
 #date-item {
     list-style-position: inside;
     border: 1px solid white
