added api that loads a Kanye West quote each time you load the page

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@ h1 {
   color: white
 }
 
+p {
+  width: fit-content;
+  margin: auto;
+  font-family: fantasy;
+  color: white
+}
+
 .input {
   width: fit-content;
   margin: auto;
